[gd_scene load_steps=20 format=3 uid="uid://dg4n7tp4d7q1y"]

[ext_resource type="Script" uid="uid://cg7gqtqmsfllo" path="res://scenes/slime.gd" id="1_n6pvg"]
[ext_resource type="Texture2D" uid="uid://cvxlgmveuihst" path="res://assets/sprites/slime_green.png" id="1_p2gj0"]
[ext_resource type="PackedScene" uid="uid://dhq0pa6na6p7k" path="res://scenes/killzone.tscn" id="2_n6pvg"]
[ext_resource type="AudioStream" uid="uid://d1ax8m5f06lxm" path="res://assets/sounds/RetroImpact.wav" id="4_pjw23"]
[ext_resource type="AudioStream" uid="uid://4dmtbkiktebn" path="res://assets/sounds/explosion.wav" id="5_2npkn"]

[sub_resource type="AtlasTexture" id="AtlasTexture_pjw23"]
atlas = ExtResource("1_p2gj0")
region = Rect2(0, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_2npkn"]
atlas = ExtResource("1_p2gj0")
region = Rect2(24, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_fd6lc"]
atlas = ExtResource("1_p2gj0")
region = Rect2(48, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_gstla"]
atlas = ExtResource("1_p2gj0")
region = Rect2(72, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_n6pvg"]
atlas = ExtResource("1_p2gj0")
region = Rect2(48, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_v5wyi"]
atlas = ExtResource("1_p2gj0")
region = Rect2(24, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_0l8pv"]
atlas = ExtResource("1_p2gj0")
region = Rect2(0, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_vnioy"]
atlas = ExtResource("1_p2gj0")
region = Rect2(48, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_2xjuo"]
atlas = ExtResource("1_p2gj0")
region = Rect2(24, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_a02ik"]
atlas = ExtResource("1_p2gj0")
region = Rect2(0, 0, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_v5wyi"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pjw23")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2npkn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fd6lc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gstla")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_n6pvg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v5wyi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0l8pv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vnioy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2xjuo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a02ik")
}],
"loop": false,
"name": &"die",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pjw23"]
size = Vector2(14, 12)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0l8pv"]
size = Vector2(14, 12)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_n6pvg"]
size = Vector2(14, 12)

[node name="Slime" type="CharacterBody2D"]
script = ExtResource("1_n6pvg")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_v5wyi")
animation = &"die"
autoplay = "default"
frame = 5
frame_progress = 1.0
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 6)
shape = SubResource("RectangleShape2D_pjw23")

[node name="Killzone" parent="." instance=ExtResource("2_n6pvg")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Killzone"]
position = Vector2(0, 6)
shape = SubResource("RectangleShape2D_0l8pv")

[node name="RayCastRight" type="RayCast2D" parent="."]
position = Vector2(0, 6)
target_position = Vector2(10, 0)

[node name="RayCastLeft" type="RayCast2D" parent="."]
position = Vector2(0, 6)
target_position = Vector2(-10, 0)

[node name="RayCastFloor" type="RayCast2D" parent="."]
position = Vector2(7.755, 8)
target_position = Vector2(0, 35)

[node name="Hurtbox" type="Area2D" parent="." groups=["enemy_hurtbox"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(0, 6)
shape = SubResource("RectangleShape2D_n6pvg")

[node name="HitSfx" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_pjw23")
bus = &"sfx"

[node name="DeathSfx" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_2npkn")
bus = &"sfx"
